Added the Batak, Achanese, Cham, Thai and Khmer cultures.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -27,7 +27,168 @@
  anatolian_turkish_collective_noun:2 "Türkler"
  austronesian_group:0 "Austronesian"
  austronesian_group_collective_noun:0 "Austronesian"
+ baron_feudal_male_austronesian_group:0 "Damapati"
+ baron_feudal_female_austronesian_group:0 "Damapatni"
+ barony_feudal_austronesian_group:0 "Dama"
+ count_feudal_male_austronesian_group:0 "Thakur"
+ count_feudal_female_austronesian_group:0 "Thakurani"
+ county_feudal_austronesian_group:0 "Thikana"
+ duke_feudal_male_austronesian_group:0 "Raja"
+ duke_feudal_female_austronesian_group:0 "Rani"
+ duchy_feudal_austronesian_group:0 "Raj"
+ king_feudal_male_austronesian_group:0 "Maharaja"
+ king_feudal_female_austronesian_group:0 "Maharani"
+ emperor_feudal_male_austronesian_group:0 "Samrat"
+ emperor_feudal_female_austronesian_group:0 "Samrajni"
+ prince_male_austronesian_group:0 "Rajkumar"
+ prince_female_austronesian_group:0 "Rajkumari"
+ prince_male_austronesian_group_empire:0 "Rajkumar"
+ prince_female_austronesian_group_empire:0 "Rajkumari"
+ # baron_feudal_male_sinosphere:0 "男爵"
+ # baron_feudal_female_sinosphere:0 "女男爵"
+ # barony_feudal_sinosphere:0 "男爵国"
+ # count_feudal_male_sinosphere:0 "伯爵"
+ # count_feudal_female_sinosphere:0 "女伯爵"
+ # county_feudal_sinosphere:0 "伯爵国"
+ # duke_feudal_male_sinosphere:0 "公爵"
+ # duke_feudal_female_sinosphere:0 "女公爵"
+ # duchy_feudal_sinosphere:0 "公爵国"
+ # king_feudal_male_sinosphere:0 "王"
+ # king_feudal_female_sinosphere:0 "女王"
+ # kingdom_feudal_sinosphere:0 "王國"
+ # emperor_feudal_male_sinosphere:0 "天皇"
+ # emperor_feudal_female_sinosphere:0 "皇后"
+ # empire_feudal_sinosphere:0 "帝國"
+ # prince_male_sinosphere:0 "王子"
+ # prince_female_sinosphere:0 "公主"
+ baron_feudal_male_japanese_group:0 "Danshaku"
+ baron_feudal_female_japanese_group:0 "Jodanshaku"
+ barony_feudal_japanese_group:0 "Danshaku-koku"
+ count_feudal_male_japanese_group:0 "Hakushaku"
+ count_feudal_female_japanese_group:0 "Jowakushaku"
+ county_feudal_japanese_group:0 "Hakushaku-koku"
+ duke_feudal_male_japanese_group:0 "Kōshaku"
+ duke_feudal_female_japanese_group:0 "Jogōshaku"
+ duchy_feudal_japanese_group:0 "Kōshaku-koku"
+ king_feudal_male_japanese_group:0 "Ō"
+ king_feudal_female_japanese_group:0 "Joō"
+ kingdom_feudal_japanese_group:0 "Ōkoku"
+ emperor_feudal_male_japanese_group:0 "Ten'nō"
+ emperor_feudal_female_japanese_group:0 "Kōgō"
+ empire_feudal_japanese_group:0 "Teikoku"
+ prince_male_japanese_group:0 "Ōji"
+ prince_female_japanese_group:0 "Kōshu"
+ baron_feudal_male_han:0 "Nánjué"
+ baron_feudal_female_han:0 "Nǚ nánjué"
+ barony_feudal_han:0 "Nánjuéguó"
+ count_feudal_male_han:0 "Bójué"
+ count_feudal_female_han:0 "Nǚ bójué"
+ county_feudal_han:0 "Bójuéguó"
+ duke_feudal_male_han:0 "Gōngjué"
+ duke_feudal_female_han:0 "Nǚ gōngjué"
+ duchy_feudal_han:0 "Gōngjuéguó"
+ king_feudal_male_han:0 "Wáng"
+ king_feudal_female_han:0 "Nǚwáng"
+ kingdom_feudal_han:0 "Wángguó"
+ emperor_feudal_male_han:0 "Tiānhuáng"
+ emperor_feudal_female_han:0 "Huánghòu"
+ empire_feudal_han:0 "Dìguó"
+ prince_male_han:0 "Wángzǐ"
+ prince_female_han:0 "Gōngzhǔ"
+ baron_feudal_male_cantonese:0 "Nàahmjeuk"
+ baron_feudal_female_cantonese:0 "Néuihnàahmjeuk"
+ barony_feudal_cantonese:0 "Nàahmjeukgwok"
+ count_feudal_male_cantonese:0 "Baakjeuk"
+ count_feudal_female_cantonese:0 "Néuihbaakjeuk"
+ county_feudal_cantonese:0 "Baakjeukgwok"
+ duke_feudal_male_cantonese:0 "Gūngjeuk"
+ duke_feudal_female_cantonese:0 "Néuihgūngjeuk"
+ duchy_feudal_cantonese:0 "Gūngjeukgwok"
+ king_feudal_male_cantonese:0 "Wòhng"
+ king_feudal_female_cantonese:0 "Néuihwòhng"
+ kingdom_feudal_cantonese:0 "Wòhnggwok"
+ emperor_feudal_male_cantonese:0 "Tīnwòhng"
+ emperor_feudal_female_cantonese:0 "Wòhnghauh"
+ empire_feudal_cantonese:0 "Daigwok"
+ prince_male_cantonese:0 "Wòhngjí"
+ prince_female_cantonese:0 "Gūngjyú"
+ baron_feudal_male_vietnamese:0 "Nam Tước"
+ baron_feudal_female_vietnamese:0 "Nữ Nam Tước"
+ barony_feudal_vietnamese:0 "Nam Tước Quốc"
+ count_feudal_male_vietnamese:0 "Bá Tước"
+ count_feudal_female_vietnamese:0 "Nữ Bá Tước"
+ county_feudal_vietnamese:0 "Bá Tước Quốc"
+ duke_feudal_male_vietnamese:0 "Công Tước"
+ duke_feudal_female_vietnamese:0 "Nữ Công Tước"
+ duchy_feudal_vietnamese:0 "Công Tước Quốc"
+ king_feudal_male_vietnamese:0 "Vương"
+ king_feudal_female_vietnamese:0 "Nữ Vương"
+ kingdom_feudal_vietnamese:0 "Vương Quốc"
+ emperor_feudal_male_vietnamese:0 "Thiên Hoàng"
+ emperor_feudal_female_vietnamese:0 "Hoàng Hậu"
+ empire_feudal_vietnamese:0 "Đế Quốc"
+ prince_male_vietnamese:0 "Vương Tý"
+ prince_female_vietnamese:0 "Công Chủ"
+ baron_feudal_male_korean_group:0 "Namjak"
+ baron_feudal_female_korean_group:0 "Nyeonamjak"
+ barony_feudal_korean_group:0 "Namjakguk"
+ count_feudal_male_korean_group:0 "Baekjak"
+ count_feudal_female_korean_group:0 "Nyeobaekjak"
+ county_feudal_korean_group:0 "Baekjakguk"
+ duke_feudal_male_korean_group:0 "Gongjak"
+ duke_feudal_female_korean_group:0 "Nyeogongjak"
+ duchy_feudal_korean_group:0 "Gongjakguk"
+ king_feudal_male_korean_group:0 "Wang"
+ king_feudal_female_korean_group:0 "Nyeowang"
+ kingdom_feudal_korean_group:0 "Wangguk"
+ emperor_feudal_male_korean_group:0 "Cheonhwang"
+ emperor_feudal_female_korean_group:0 "Hwanghu"
+ empire_feudal_korean_group:0 "Jeguk"
+ prince_male_korean_group:0 "Wangja"
+ prince_female_korean_group:0 "Gongju"
+ baron_feudal_male_thai:0 "Thampat"
+ baron_feudal_male_khmer:0 "Dampat"
+ baron_feudal_female_thai:0 "Thampatni"
+ baron_feudal_female_khmer:0 "Dampatni"
+ barony_feudal_thai:0 "Tham"
+ barony_feudal_khmer:0 "Dam"
+ count_feudal_male_thai:0 "Nạb"
+ count_feudal_male_khmer:0 "Reab"
+ count_feudal_female_thai:0 "Phasadi"
+ count_feudal_female_khmer:0 "Teinotei"
+ county_feudal_thai:0 "Khet"
+ county_feudal_khmer:0 "Khaolaphoun"
+ duke_feudal_male_thai:0 "Phra"
+ duke_feudal_male_khmer:0 "Braḥ"
+ duke_feudal_female_thai:0 "Phrahini"
+ duke_feudal_female_khmer:0 "Braḥini"
+ duchy_feudal_thai:0 "Khunnang"
+ duchy_feudal_khmer:0 "Damhie"
+ king_feudal_male_thai:0 "Racha"
+ king_feudal_male_khmer:0 "Rācā"
+ king_feudal_female_thai:0 "Rachini"
+ king_feudal_female_khmer:0 "Rācini"
+ kingdom_feudal_thai:0 "Ratchaanachak"
+ kingdom_feudal_khmer:0 "Rājāṇācak"
+ emperor_feudal_male_thai:0 "Chakkraphat"
+ emperor_feudal_male_khmer:0 "Cakrabartti"
+ emperor_feudal_female_thai:0 "Chakkraphatdini"
+ emperor_feudal_female_khmer:0 "Cakrabattini"
+ empire_feudal_thai:0 "Chakkrawat"
+ empire_feudal_khmer:0 "Cakrawarti"
+ prince_male_thai:0 "Chaochai"
+ prince_male_khmer:0 "Rabahangkamcheasa"
+ prince_female_thai:0 "Chaoying"
+ prince_female_khmer:0 "Anakaangkomcheasa"
  malay:0 "Malay"
  malay_collective_noun:0 "Malay"
  javanese:0 "Javanese"
  javanese_collective_noun:0 "Javanese"
+ batak:0 "Batak"
+ batak_collective_noun:0 "Batak"
+ cham:0 "Cham"
+ cham_collective_noun:0 "Cham"
+ thai:0 "Thai"
+ thai_collective_noun:0 "Thai"
+ khmer:0 "Khmêr"
+ khmer_collective_noun:0 "Khmêr"
