--- a/localization/english/names/malay_character_names_l_english.yml
+++ b/localization/english/names/malay_character_names_l_english.yml
@@ -337,6 +337,7 @@
  Nugroho:0 "Nugroho"
  Nur:0 "Nur"
  Nuutea:0 "Nuutea"
+ Nuutea:0 "Nuutea"
  Omar:0 "Omar"
  Orama:0 "Orama"
  Osman:0 "Osman"
@@ -579,3 +580,62 @@
  Zulkarnain:0 "Zulkarnain"
  Zulkifli:0 "Zulkifli"
  Zulkipli:0 "Zulkipli"
+ Hatorusan:0 "Hatorusan"
+ Sisingamangaraja:0 "Sisingamangaraja"
+ Jambu:0 "Jambu"
+ Legeh:0 "Legeh"
+ Inderapura:0 "Inderapura"
+ Besut:0 "Besut"
+ Bestari:0 "Bestari"
+ Sahl:0 "Sahl"
+ Bestari:0 "Bestari"
+ Embong:0 "Embong"
+ Luncai:0 "Luncai"
+ Benderang:0 "Benderang"
+ Adi:0 "Adi"
+ Hitam:0 "Hitam
+ Tanah_Jawa:0 "Tanah Jawa"
+ Kota_Baru:0 "Kota Baru"
+ Temasek:0 "Temasek"
+ Paksi:0 "Paksi"
+ Raja_Alang:0 "Raja Alang"
+ Sulong:0 "Sulong
+ Merong:0 "Merong"
+ Badang:0 "Badang"
+ Noh:0 "Noh"
+ Jiwa:0 "Jiwa"
+ Sangkara:0 "Sangkara"
+ Sugriwa:0 "Sugriwa"
+ Kulup:0 "Kulup"
+ Merdeka:0 "Merdeka"
+ Chik:0 "Chik"
+ Nila:0 "Nila"
+ Panji:0 "Panji"
+ Armada:0 "Armada"
+ Pekan:0 "Pekan"
+ Sulong:0 "Sulong"
+ Long:0 "Long"
+ Setiawan:0 "Setiawan"
+ Kacak:0 "Kacak"
+ Adiwarna:0 "Adiwarna"
+ Srikandi:0 "Srikandi"
+ Jelita:0 "Jelita"
+ Asmara:0 "Asmara"
+ Cendana:0 "Cendana"
+ Kantan:0 "Kantan"
+ Halia:0 "Halia"
+ Manggis:0 "Manggis"
+ Kesum:0 "Kesum"
+ Akasia:0 "Akasia"
+ Cengkih:0 "Cengkih"
+ Anggerik:0 "Anggerik"
+ Kenanga:0 "Kenanga"
+ Cempaka:0 "Cempaka"
+ Suria:0 "Suria"
+ Cantik:0 "Cantik"
+ Chantiq:0 "Chantiq"
+ Anggun:0 "Anggun"
+ Chenta:0 "Chenta"
+ Kirana :0 "Kirana"
+ Lestari:0 "Lestari"
+ Citra:0 "Citra"
