--- a/localization/english/names/cham_character_names_l_english.yml
+++ b/localization/english/names/cham_character_names_l_english.yml
@@ -19,7 +19,7 @@
  Bhavesh:0 "Bhavesh"
  Bhavin:0 "Bhavin"
  Bhuvanesh:0 "Bhuvanesh"
- Cei_Anâk:0 "Cei Anâk"
+ Cei_Anak:0 "Cei Anâk"
  Cei_Brei:0 "Cei Brei"
  Chaitanya:0 "Chaitanya"
  Che_Anan:0 "Che Anan"
