--- a/localization/english/names/malay_character_names_l_english.yml
+++ b/localization/english/names/malay_character_names_l_english.yml
@@ -337,7 +337,7 @@
  Nugroho:0 "Nugroho"
  Nur:0 "Nur"
  Nuutea:0 "Nuutea"
- Nuutea:0 "Nuutea"
+ Nuutea:0 "Nuutea"
  Omar:0 "Omar"
  Orama:0 "Orama"
  Osman:0 "Osman"
@@ -395,11 +395,11 @@
  Rahmat_Shh:0 "Rahmat Shâh"
  Rai:0 "Rai"
  Raihau:0 "Raihau"
- Raihau:0 "Raihau"
+ Raihau:0 "Raihau"
  Raimere:0 "Raimere"
- Raimere:0 "Raimere"
+ Raimere:0 "Raimere"
  Rainui:0 "Rainui"
- Rainui:0 "Rainui"
+ Rainui:0 "Rainui"
  Raja:0 "Raja"
  Rajah_Qasim:0 "Rajah Qasim"
  Rajasanagara:0 "Rajasanagara"
@@ -593,13 +593,13 @@
  Luncai:0 "Luncai"
  Benderang:0 "Benderang"
  Adi:0 "Adi"
- Hitam:0 "Hitam
+ Hitam:0 "Hitam"
  Tanah_Jawa:0 "Tanah Jawa"
  Kota_Baru:0 "Kota Baru"
  Temasek:0 "Temasek"
  Paksi:0 "Paksi"
  Raja_Alang:0 "Raja Alang"
- Sulong:0 "Sulong
+ Sulong:0 "Sulong"
  Merong:0 "Merong"
  Badang:0 "Badang"
  Noh:0 "Noh"
@@ -636,6 +636,6 @@
  Chantiq:0 "Chantiq"
  Anggun:0 "Anggun"
  Chenta:0 "Chenta"
- Kirana :0 "Kirana"
+ Kirana:0 "Kirana"
  Lestari:0 "Lestari"
  Citra:0 "Citra"
