--- a/localization/english/names/thai_character_names_l_english.yml
+++ b/localization/english/names/thai_character_names_l_english.yml
@@ -52,7 +52,7 @@
  Ngam:0 "Ngam"
  Niran:0 "Niran"
  Noi:0 "Noi"
- Paśú:0 "Paśú"
+ Pasu:0 "Paśú"
  Phetchaburi:0 "Phetchaburi"
  Phimai:0 "Phimai"
  Phitsanulok:0 "Phitsanulok"
