--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -182,6 +182,8 @@
  prince_female_khmer:0 "Anakaangkomcheasa"
  malay:0 "Malay"
  malay_collective_noun:0 "Malay"
+ achenese:0 "Achenese"
+ achenese_collective_noun:0 "Achenese"
  javanese:0 "Javanese"
  javanese_collective_noun:0 "Javanese"
  batak:0 "Batak"
