Added new christological doctrines.

--- a/localization/english/religion/far_eastern_doctrines_l_english.yml
+++ b/localization/english/religion/far_eastern_doctrines_l_english.yml
@@ -9,3 +9,54 @@
  special_doctrine_hellenic_name:0 "Hellenistic Syncretism"
  special_doctrine_hellenic_desc:0 "Syncretism was common during the Hellenistic period, with rulers regularly identifying local deities in various parts of their domains with the relevant god or goddess of the Greek Pantheon as a means of increasing the cohesion of their kingdom."
  doctrine_parameter_hostility_override_special_doctrine_hellenic:0 "Other Hellenistic [faiths|E] with the $special_doctrine_hellenic_name$ doctrine are considered [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)3' )|V]"
+ 
+ doctrine_christian_orientation_name:0 "Orientation"
+ doctrine_christian_orientation_desc:0 "The question of who is the spiritual leader of the Christian community is an essential one."
+ christian_roman_doctrine_name:0 "Communion with Rome"
+ christian_roman_doctrine_desc:0 "Jesus Christ gave the Keys to Heaven to Saint Peter, the first Bishop of Rome, thus it is only proper that we recognize his successors as the Vicars of Christ and the true leaders of the Christian community."
+ doctrine_parameter_hostility_override_christian_roman_doctrine_1:0 "Considers Christian [faiths|E] in communion with Rome to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ doctrine_parameter_hostility_override_christian_roman_doctrine:0 "Considers Christian [faiths|E] in communion with Rome to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ christian_orthodox_doctrine_name:0 "The True Dogma"
+ christian_orthodox_doctrine_desc:0 "The Bishop of Rome, Patriarch of the West, is merely one of the five within the Pentarchy - we refuse to recognize the primacy of Rome, we refuse to admit to them any position beyond 'first among equals'."
+ doctrine_parameter_hostility_override_christian_orthodox_doctrine_1:0 "Considers Orthodox [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ doctrine_parameter_hostility_override_christian_orthodox_doctrine:0 "Considers Orthodox [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ christian_protestant_doctrine_name:0 "By Script Alone"
+ christian_protestant_doctrine_desc:0 "The Holy Bible is the one and only infallible source of authority for the Christian faith - the Bishop of Rome and the Patriarchs of the Pentarchy are mere mortals in no authority to override the immutable scripture."
+ doctrine_parameter_hostility_override_christian_protestant_doctrine_1:0 "Considers Protestant [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ doctrine_parameter_hostility_override_christian_protestant_doctrine:0 "Considers Protestant [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ christian_wacky_doctrine_name:0 "Heterodox Sects"
+ christian_wacky_doctrine_desc:0 "Our doctrines set us far apart from mainstream Christian beliefs. We see the truth they blind themselves to!"
+ doctrine_parameter_hostility_override_christian_wacky_doctrine_1:0 "Considers other Heterodox Christian [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ doctrine_parameter_hostility_override_christian_wacky_doctrine:0 "Considers Heterodox Christian [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ 
+ ROMAN_COMMUNION_NEEDS_TRIGGER:0 "Must not have a Head of Faith, unless is Catholicism."
+ INCOMPATIBLE_WITH_DOCTRINE_ADULTERY_MEN_ACCEPTED:0 "Incompatible with the [doctrine|E] [GetFaithDoctrine('doctrine_adultery_men_accepted').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_DOCTRINE_ADULTERY_WOMEN_ACCEPTED:0 "Incompatible with the [doctrine|E] [GetFaithDoctrine('doctrine_adultery_women_accepted').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_DOCTRINE_CONSANGUINITY_UNRESTRICTED:0 "Incompatible with the [doctrine|E] [GetFaithDoctrine('doctrine_consanguinity_unrestricted').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_DOCTRINE_DEVIANCY_ACCEPTED:0 "Incompatible with the [doctrine|E] [GetFaithDoctrine('doctrine_deviancy_accepted').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_DOCTRINE_GENDER_FEMALE_DOMINATED:0 "Incompatible with the [doctrine|E] [GetFaithDoctrine('doctrine_gender_female_dominated').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_DOCTRINE_HOMOSEXUALITY_ACCEPTED:0 "Incompatible with the [doctrine|E] [GetFaithDoctrine('doctrine_homosexuality_accepted').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_DOCTRINE_THEOCRACY_LAY_CLERGY:0 "Incompatible with the [doctrine|E] [GetFaithDoctrine('doctrine_theocracy_lay_clergy').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_DOCTRINE_WITCHCRAFT_ACCEPTED:0 "Incompatible with the [doctrine|E] [GetFaithDoctrine('doctrine_witchcraft_accepted').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_ANICONISM:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_aniconism').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_ASTROLOGY:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_astrology').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_CARNAL_EXALTATION:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_carnal_exaltation').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_COMMUNION:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_communion').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_CONSOLAMENTUM:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_consolamentum').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_DIVINE_MARRIAGE:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_divine_marriage').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_ESOTERICISM:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_esotericism').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_GNOSTICISM:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_gnosticism').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_HEDONISTIC:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_hedonistic').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_LITERALISM:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_literalism').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_MONASTICISM:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_monasticism').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_NATURAL_PRIMITIVISM:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_natural_primitivism').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_POLYAMORY:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_polyamory').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_RITUAL_CANNIBALISM:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_ritual_cannibalism').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_RITUAL_CELEBRATIONS:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_ritual_celebrations').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_SACRED_SHADOWS:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_sacred_shadows').GetName( GetPlayer.GetFaith )]"
+ INCOMPATIBLE_WITH_TENET_SANCTITY_OF_NATURE:0 "Incompatible with the [core_tenet|E] [GetFaithDoctrine('tenet_sanctity_of_nature').GetName( GetPlayer.GetFaith )]"
+ 
+ MUST_HAVE_TENET_ALEXANDRIAN_CATECHISM:0 "Requires the [core_tenet|E] [GetFaithDoctrine('tenet_alexandrian_catechism').GetName( GetPlayer.GetFaith )]"
+ MUST_HAVE_TENET_COMMUNION:0 "Requires the [core_tenet|E] [GetFaithDoctrine('tenet_communion').GetName( GetPlayer.GetFaith )]"
+ MUST_HAVE_TENET_PASTORAL_ISOLATION:0 "Requires the [core_tenet|E] [GetFaithDoctrine('tenet_pastoral_isolation').GetName( GetPlayer.GetFaith )]"
+ MUST_HAVE_TENET_PENTARCHY:0 "Requires the [core_tenet|E] [GetFaithDoctrine('tenet_pentarchy').GetName( GetPlayer.GetFaith )]"
