Added a lot of new doctrines, but it still requires some work.

--- a/localization/english/religion/far_eastern_doctrines_l_english.yml
+++ b/localization/english/religion/far_eastern_doctrines_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english: 
  turan_tolerance_name:0 "Turanian Brotherhood"
- turan_tolerance_desc:0 "Turanian peoples stick together!"
- special_doctrine_turan_name:0 "Turanian Brotherhood"
- special_doctrine_turan_desc:0 "Turanian peoples stick together!"
+ turan_tolerance_desc:0 "We may have dispersed into many far away lands since time immemorial, we still won't forget about our ancient blood ties."
+ special_doctrine_turan_name:0 "Turanian Syncretism"
+ special_doctrine_turan_desc:0 "We may have dispersed into many far away lands since time immemorial, we still won't forget about our ancient blood ties."
  doctrine_parameter_hostility_override_special_doctrine_turan:0 "Other Turanian [faiths|E] with the $special_doctrine_turan_name$ doctrine are considered [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)3' )|V]"
  hellenic_tolerance_name:0 "Hellenistic Syncretism"
  hellenic_tolerance_desc:0 "Syncretism was common during the Hellenistic period, with rulers regularly identifying local deities in various parts of their domains with the relevant god or goddess of the Greek Pantheon as a means of increasing the cohesion of their kingdom."
@@ -12,6 +12,14 @@
  
  doctrine_christian_orientation_name:0 "Orientation"
  doctrine_christian_orientation_desc:0 "The question of who is the spiritual leader of the Christian community is an essential one."
+ christian_chalcedonian_doctrine_name:0 "Dual Nature"
+ christian_chalcedonian_doctrine_desc:0 "Jesus was one person, but with two natures: a human and a divine one."
+ doctrine_parameter_hostility_override_christian_chalcedonian_doctrine_1:0 "Considers Chalcedonian Christian [faiths|E] with Rome to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ doctrine_parameter_hostility_override_christian_chalcedonian_doctrine:0 "Considers Chalcedonian Christian [faiths|E] with Rome to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ christian_miaphysite_doctrine_name:0 "One and Perfect"
+ christian_miaphysite_doctrine_desc:0 "Jesus was one person with one nature: fully human and fully divine at the same time."
+ doctrine_parameter_hostility_override_christian_miaphysite_doctrine_1:0 "Considers Miaphysite Christian [faiths|E] with Rome to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
+ doctrine_parameter_hostility_override_christian_miaphysite_doctrine:0 "Considers Miaphysite Christian [faiths|E] with Rome to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
  christian_roman_doctrine_name:0 "Communion with Rome"
  christian_roman_doctrine_desc:0 "Jesus Christ gave the Keys to Heaven to Saint Peter, the first Bishop of Rome, thus it is only proper that we recognize his successors as the Vicars of Christ and the true leaders of the Christian community."
  doctrine_parameter_hostility_override_christian_roman_doctrine_1:0 "Considers Christian [faiths|E] in communion with Rome to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)2' )|V]"
@@ -60,3 +68,86 @@
  MUST_HAVE_TENET_COMMUNION:0 "Requires the [core_tenet|E] [GetFaithDoctrine('tenet_communion').GetName( GetPlayer.GetFaith )]"
  MUST_HAVE_TENET_PASTORAL_ISOLATION:0 "Requires the [core_tenet|E] [GetFaithDoctrine('tenet_pastoral_isolation').GetName( GetPlayer.GetFaith )]"
  MUST_HAVE_TENET_PENTARCHY:0 "Requires the [core_tenet|E] [GetFaithDoctrine('tenet_pentarchy').GetName( GetPlayer.GetFaith )]"
+ 
+ # Syncretism doctrines
+ doctrine_syncretism_name:0 "Syncretism & Orthodoxy"
+ doctrine_syncretism_desc:0 "Do we keep to ourselves, or do we open ourselves up for dialogue with the heathens?"
+ no_syncretism_doctrine_name:0 "No Syncretism"
+ no_syncretism_doctrine_desc:0 "Our faith is the one true faith in the universe, and there is nothing to be learned from heathens, whose existence we merely tolerate at best."
+ eastern_syncretism_doctrine_name:0 "Eastern Syncretism"
+ eastern_syncretism_doctrine_desc:0 "There is something to be learned from the way the different eastern religions tolerate each other. They may not follow the true faith, but that does not make them evil."
+ pagan_syncretism_doctrine_name:0 "Syncretic Folk Traditions"
+ pagan_syncretism_doctrine_desc:0 "Who are we to tell others that their traditions are untrue? It is not our place to lecture them about customs they have practiced for centuries: instead, we should learn quietly about their ways."
+ doctrine_parameter_unreformed_syncretic_actor_opinion_active:2 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [GetFaithDoctrine('unreformed_faith_doctrine').GetBaseName] [faiths|E]"
+ doctrine_parameter_opinion_of_unreformed_syncretic_recipient_opinion_active:0 ""
+ doctrine_parameter_unreformed_syncretic_recipient_opinion_active:1 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [faiths|E] that have $pagan_syncretism_doctrine_name$ [doctrine|E]"
+ christian_syncretism_doctrine_name:0 "Christian Syncretism"
+ christian_syncretism_doctrine_desc:0 "Jesus of Nazareth may not have been true divinity, but he was still an upstanding and virtuous figure. We should honor and respect his teachings."
+ doctrine_parameter_christian_syncretic_recipient_opinion_active:1 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [faiths|E] that have the $christian_syncretism_doctrine_name$ [doctrine|E]"
+ muslim_syncretism_doctrine_name:0 "Islamic Syncretism"
+ muslim_syncretism_doctrine_desc:0 "The Prophet's words are indisputably wise and just, and whatever our other doubts, we should take heed of his thoughts and deeds."
+ doctrine_parameter_islamic_syncretic_recipient_opinion_active:1 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [faiths|E] that have the $muslim_syncretism_doctrine_name$ [doctrine|E]"
+ jewish_syncretism_doctrine_name:0 "Jewish Syncretism"
+ jewish_syncretism_doctrine_desc:0 "Though we do not agree with its claims about God's chosen people, the wisdom of the Jewish Torah is undeniable, and there is much to be learned from the text."
+ doctrine_parameter_jewish_syncretic_recipient_opinion_active:1 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [faiths|E] that have the $jewish_syncretism_doctrine$ [doctrine|E]"
+ hellenic_syncretism_doctrine_name:0 "$hellenic_tolerance_name$"
+ hellenic_syncretism_doctrine_desc:0 "$special_doctrine_hellenic_desc$"
+ doctrine_parameter_hostility_override_hellenic_syncretism_doctrine:0 "$doctrine_parameter_hostility_override_special_doctrine_hellenic$"
+ turanic_syncretism_doctrine_name:0 "$special_doctrine_turan_name$"
+ turanic_syncretism_doctrine_desc:0 "$special_doctrine_turan_desc$"
+ doctrine_parameter_hostility_override_turanic_syncretism_doctrine:0 "$doctrine_parameter_hostility_override_special_doctrine_turan$"
+ divine_marriage_doctrine_name:0 "Divine Marriage"
+ divine_marriage_doctrine_desc:0 "The blood of the divine runs through the veins of our kings and queens. Keeping our bloodlines pure is the best way to ensure our family's reign continues for centuries to come."
+ gnosticism_doctrine_name:0 "Gnosticism"
+ gnosticism_doctrine_desc:0 "Through knowledge, the divine spark that rests inside all humans may be liberated and returned to its heavenly source in the spirit-realm."
+ doctrine_parameter_hostility_override_tenet_gnosticism:1 "Considers other Gnostic [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of $hostility_hostile_tooltippable$ or $hostility_evil_tooltippable$"
+ # New Doctrine groups
+ doctrine_cultural_identity_name:0 "Cross-Cultural Disposition"
+ doctrine_cultural_identity_desc:0 "How strongly is our faith tied to our culture is a very important question."
+ cosmopolitan_doctrine_name:0 "Universalism"
+ cosmopolitan_doctrine_desc:0 "Our rites and beliefs can be shared with anyone, no matter their heritage. What truly is matters is who, and what they believe in."
+ communal_identity_doctrine_name:0 "Communal Identity"
+ communal_identity_doctrine_desc:0 "Our faith and our culture are intrinsically linked together. This practice strengthens the bonds of our community, though it tends to exclude foreigners."
+ strong_communal_identity_doctrine_name:0 "Strong Communal Identity"
+ strong_communal_identity_doctrine_desc:0 "It is almost unthinkable that someone outside of our close community could understand the very basics of our faith. Our traditions and rites might seem like an anomaly by anyone outside of our group, but we told them as core tenets of our identity."
+ doctrine_afterlife_name:0 "The Afterlife"
+ doctrine_afterlife_desc:0 "Every religion must give an answer to this simple question: what awaits us after death?"
+ reincarnation_doctrine_name:0 "Reincarnation"
+ reincarnation_doctrine_desc:0 "We have lived many lives before this one, and will continue to live many lives after it. Every death is only the beginning of something new."
+ leaving_the_cycle_doctrine_name:0 "End of the Cycle"
+ leaving_the_cycle_doctrine_desc:0 "Each of us have lived many lives before, all of us bringing us closer to the end of the cycle. Every death is either a rebirth, or, if we're prepared, the End of the Cycle."
+ judgement_doctrine_name:0 "Divine Judgement"
+ judgement_doctrine_desc:0 "Whenever someone dies, they are judged by the divines for the sins, good deeds, vices and virtues - those who were good and virtuous are sent to Heaven to be in divine custody for eternity, those who were wicked and sinful are sent to Hell to suffer for an eternity."
+ mercy_of_gods_doctrine_name:0 "Divine Mercy"
+ mercy_of_gods_doctrine_desc:0 "Whenever someone dies, they are judged by the divines for their sins, good deeds, vices and virtues - but mankind is inherently sinful, so only through unearned divine grace, may we find salvation."
+ eternal_feast_doctrine_name:0 "Eternal Feast"
+ eternal_feast_doctrine_desc:0 "Those who have lived a good life and died like heroes are to spend an eternity feasting as a result - on the other hand, those who did not..."
+ final_death_doctrine_name:0 "Oblivion"
+ final_death_doctrine_desc:0 "There is nothing after death - only silence, blackness and oblivion."
+ spirit_realms_doctrine_name:0 "The Picking of the Valkyries"
+ spirit_realms_doctrine_desc:0 "???" 
+ spirit_remainder_name:0 "Bound to the Land"
+ spirit_remainder_doctrine_desc:0 "Our bodies may die and decay, but our spirits will never leave this world, and will continue to the land until the name of times."
+ doctrine_final_disposition_name:0 "Final Resting Place" 
+ doctrine_final_disposition_desc:0 "Every defines a set of funeral rites and practices, prescribing what to do with the dead, and how to go on about it."
+ # burial - prestige bonus, malus to development growth in mountains
+ # embalming - gives province modifier and events similar to one of runestone, must spend money to this shit if you dont want lose prestige and/or piety levels
+ # cremation - health and desiese bonuses from vanilla sky burials, slow dev growth in mountains, deserts and steppes
+ # sky burial - just vanilla events
+ burial_doctrine_name:0 "Burial"
+ burial_doctrine_desc:0 "From dust you came, to dust you shall return. It is only proper, that we bury our dead into the ground that gave them life in the first place."
+ sky_burial_doctrine_name:0 "Sky Burial"
+ sky_burial_doctrine_desc:0 "The dead should not be imprisoned underground — it is far better to allowed them to be consumed by scavenging birds, where in a final act of generosity they can feed the world which fed them."
+ cremation_doctrine_name:0 "Cremation"
+ cremation_doctrine_desc:0 "The dead should not be imprisoned underground — it is far better to burn the body in a dignified manner, releasing their spirit into the afterlife."
+ embalming_doctrine_name:0 "Embalming"
+ embalming_doctrine_desc:0 "The dead deserve better than the pyre, the stomach of scavanging birds or the earthworms - the only proper way to pay respects to our dead is to preserve their bodies, so that their descendants may lay their eyes on their ancestors, and honour them accordingly."
+ doctrine_ascetism_hedonism_name:0 "Asceticism vs Hedonism"
+ doctrine_ascetism_hedonism_desc:0 "Did the devine wish for us to enjoy the world that was created for us, or were we intended to shut ourselves off from the pursuit of material needs to focus on more important matters?"
+ asceticism_doctrine_name:0 "Asceticism"
+ asceticism_doctrine_desc:0 "Materialistic pursuits blind us to the divine truth. Only by devoting ourselves to live simple lives without luxury can to achieve spiritual enlightenment. "
+ moderation_doctrine_name:0 "Moderation"
+ moderation_doctrine_desc:0 "The divine wishes not for us to needlessly suffer, but neither should we go to the other extreme in the blind pursuit of hedonism. It is the divine will that we seek the golden middle-ground."
+ hedonism_doctrine_name:0 "Hedonism"
+ hedonism_doctrine_desc:0 "The divine filled this world with a bounty of pleasures for us to indulge in and enjoy — to not partake of such things is to snub the very work of creation itself."
+ # New 
